Addressed spacing issues with image

--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,7 @@ h1 {
 
 .crop {
     display: inline-block;
-    height: 99.5vh;
+    height: 99.84vh;
     width: 100%;
     overflow: hidden;
 }
